--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>NativeIFC</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -35,7 +35,7 @@
            <string>How the IFC file will initially be imported: Only one object, only project structure, or all individual objects.</string>
           </property>
           <property name="prefEntry" stdset="0">
-           <cstring>InitialImport</cstring>
+           <cstring>ImportStrategy</cstring>
           </property>
           <property name="prefPath" stdset="0">
            <cstring>Mod/NativeIFC</cstring>
@@ -69,6 +69,12 @@
           <property name="toolTip">
            <string>The type of object created at import. Mesh is faster, but Shapes are more precise. You can convert between the two anytime by right-clicking the object tree</string>
           </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>ShapeMode</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/NativeIFC</cstring>
+          </property>
           <item>
            <property name="text">
             <string>Shape</string>
@@ -91,6 +97,12 @@
         <property name="text">
          <string>Switch workbench after import</string>
         </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>SwitchWB</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
        </widget>
       </item>
       <item>
@@ -100,6 +112,15 @@
         </property>
         <property name="text">
          <string>Show options dialog when importing</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>AskAgain</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
         </property>
        </widget>
       </item>
@@ -119,6 +140,9 @@
         </property>
         <property name="checked">
          <bool>true</bool>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
         </property>
        </widget>
       </item>
