Allow to import as shape, mesh or coin

--- a/ui/dialogImport.ui
+++ b/ui/dialogImport.ui
@@ -67,6 +67,11 @@
          <string>Mesh</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Coin</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
