--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -85,6 +85,11 @@
             <string>Mesh</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>Coin</string>
+           </property>
+          </item>
          </widget>
         </item>
        </layout>
