--- a/ui/dialogImport.ui
+++ b/ui/dialogImport.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>353</width>
-    <height>204</height>
+    <height>235</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -86,6 +86,16 @@
      </property>
      <property name="text">
       <string>Switch workbench after import</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkLoadOrphans">
+     <property name="toolTip">
+      <string>If this is marked, objects not belonging to any project will be loaded too and placed in a separate group</string>
+     </property>
+     <property name="text">
+      <string>Load orphan objects</string>
      </property>
     </widget>
    </item>
