--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>413</width>
-    <height>315</height>
+    <width>443</width>
+    <height>406</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -114,6 +114,22 @@
        </widget>
       </item>
       <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_6">
+        <property name="toolTip">
+         <string>If this is marked, objects not belonging to any project will be loaded too and placed in a separate group</string>
+        </property>
+        <property name="text">
+         <string>Load orphan objects</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>LoadOrphans</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="Gui::PrefCheckBox" name="checkBox">
         <property name="toolTip">
          <string>If this is checked, a dialog will be shown at each import</string>
@@ -151,6 +167,47 @@
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>AskBeforeSaving</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>New project</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_4">
+        <property name="accessibleName">
+         <string>If this is checked, when creating a new projects, a default structure (site, building and storey) will be added under the project</string>
+        </property>
+        <property name="text">
+         <string>Create a default structure</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>ProjectFull</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_5">
+        <property name="accessibleName">
+         <string>Check this to ask the above question every time a project is created</string>
+        </property>
+        <property name="text">
+         <string>Ask every time</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>ProjectAskAgain</cstring>
         </property>
         <property name="prefPath" stdset="0">
          <cstring>Mod/NativeIFC</cstring>
