--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -130,6 +130,19 @@
        </widget>
       </item>
       <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_7">
+        <property name="text">
+         <string>Load property sets</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>LoadPsets</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="Gui::PrefCheckBox" name="checkBox">
         <property name="toolTip">
          <string>If this is checked, a dialog will be shown at each import</string>
