--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -131,11 +131,30 @@
       </item>
       <item>
        <widget class="Gui::PrefCheckBox" name="checkBox_7">
+        <property name="toolTip">
+         <string>Load all property sets automatically when opening an IFC file</string>
+        </property>
         <property name="text">
          <string>Load property sets</string>
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>LoadPsets</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_8">
+        <property name="toolTip">
+         <string>Load all materials automatically when opening an IFC file</string>
+        </property>
+        <property name="text">
+         <string>Load materials</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>LoadMaterials</cstring>
         </property>
         <property name="prefPath" stdset="0">
          <cstring>Mod/NativeIFC</cstring>
