--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>422</width>
-    <height>499</height>
+    <height>530</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -135,7 +135,7 @@
          <string>Load all property sets automatically when opening an IFC file</string>
         </property>
         <property name="text">
-         <string>Load property sets</string>
+         <string>Preload property sets</string>
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>LoadPsets</cstring>
@@ -151,10 +151,26 @@
          <string>Load all materials automatically when opening an IFC file</string>
         </property>
         <property name="text">
-         <string>Load materials</string>
+         <string>Preload materials</string>
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>LoadMaterials</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_11">
+        <property name="toolTip">
+         <string>Load all layers automatically when opening an IFC file</string>
+        </property>
+        <property name="text">
+         <string>Preload layers</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>LoadLayers</cstring>
         </property>
         <property name="prefPath" stdset="0">
          <cstring>Mod/NativeIFC</cstring>
