--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>422</width>
-    <height>530</height>
+    <width>454</width>
+    <height>663</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -257,6 +257,44 @@
     </widget>
    </item>
    <item>
+    <widget class="QGroupBox" name="groupBox_4">
+     <property name="title">
+      <string>New document</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_13">
+        <property name="text">
+         <string>Turn into an IFC-only document</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>SingleDoc</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_12">
+        <property name="text">
+         <string>Ask every time</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>SingleDocAskAgain</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
       <string>New project</string>
@@ -285,6 +323,9 @@
         </property>
         <property name="text">
          <string>Ask every time</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>ProjectAskAgain</cstring>
