--- a/ui/preferencesNativeIFC.ui
+++ b/ui/preferencesNativeIFC.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>454</width>
+    <width>678</width>
     <height>663</height>
    </rect>
   </property>
@@ -42,17 +42,17 @@
           </property>
           <item>
            <property name="text">
-            <string>Only root object</string>
+            <string>Only root object (default)</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Project structure</string>
+            <string>Project structure (levels)</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>All individual products</string>
+            <string>All individual IFC objects</string>
            </property>
           </item>
          </widget>
@@ -60,7 +60,7 @@
         <item row="2" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Objects type</string>
+           <string>Representation type</string>
           </property>
          </widget>
         </item>
@@ -70,7 +70,7 @@
            <string>The type of object created at import. Coin only is much faster, but you don't get the full shape information. You can convert between the two anytime by right-clicking the object tree</string>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>ShapeMode</cstring>
@@ -80,17 +80,17 @@
           </property>
           <item>
            <property name="text">
-            <string>Full shape</string>
+            <string>Load full shape (slower)</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Coin representation only</string>
+            <string>Load 3D representation only, no shape (default)</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>No 3D representation</string>
+            <string>No 3D representation at all</string>
            </property>
           </item>
          </widget>
@@ -107,22 +107,6 @@
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>SwitchWB</cstring>
-        </property>
-        <property name="prefPath" stdset="0">
-         <cstring>Mod/NativeIFC</cstring>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="Gui::PrefCheckBox" name="checkBox_6">
-        <property name="toolTip">
-         <string>If this is marked, objects not belonging to any project will be loaded too and placed in a separate group</string>
-        </property>
-        <property name="text">
-         <string>Load orphan objects</string>
-        </property>
-        <property name="prefEntry" stdset="0">
-         <cstring>LoadOrphans</cstring>
         </property>
         <property name="prefPath" stdset="0">
          <cstring>Mod/NativeIFC</cstring>
@@ -178,6 +162,22 @@
        </widget>
       </item>
       <item>
+       <widget class="Gui::PrefCheckBox" name="checkBox_10">
+        <property name="toolTip">
+         <string>When enabling this, the original version of objects dropped onto an IFC project tree will not be deleted.</string>
+        </property>
+        <property name="text">
+         <string>Keep original version of aggregated objects</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>KeepAggregated</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/NativeIFC</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="Gui::PrefCheckBox" name="checkBox">
         <property name="toolTip">
          <string>If this is checked, a dialog will be shown at each import</string>
@@ -190,38 +190,6 @@
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>AskAgain</cstring>
-        </property>
-        <property name="prefPath" stdset="0">
-         <cstring>Mod/NativeIFC</cstring>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="Gui::PrefCheckBox" name="checkBox_9">
-        <property name="toolTip">
-         <string>By default, groups containing non-geometrical data in an IFC document are hidden in the tree. You can show them by right-clicking the IFC document and selecting 'Shoiw hidden objects'. By enabling this setting, these groups will not be hidden by default anymore.</string>
-        </property>
-        <property name="text">
-         <string>Show data groups</string>
-        </property>
-        <property name="prefEntry" stdset="0">
-         <cstring>ShowDataGroups</cstring>
-        </property>
-        <property name="prefPath" stdset="0">
-         <cstring>Mod/NativeIFC</cstring>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="Gui::PrefCheckBox" name="checkBox_10">
-        <property name="toolTip">
-         <string>When enabling this, the original version of objects dropped onto an IFC project tree will not be deleted.</string>
-        </property>
-        <property name="text">
-         <string>Keep original version of aggregated objects</string>
-        </property>
-        <property name="prefEntry" stdset="0">
-         <cstring>KeepAggregated</cstring>
         </property>
         <property name="prefPath" stdset="0">
          <cstring>Mod/NativeIFC</cstring>
@@ -265,7 +233,7 @@
       <item>
        <widget class="Gui::PrefCheckBox" name="checkBox_13">
         <property name="text">
-         <string>Turn into an IFC-only document</string>
+         <string>Always lock new documents</string>
         </property>
         <property name="prefEntry" stdset="0">
          <cstring>SingleDoc</cstring>
